modified using browser sync

--- a/mysite/index.html
+++ b/mysite/index.html
@@ -5,6 +5,7 @@
  </head>
  <body>
  <H1>My Coursera Test Page</H1>
- I am using Git to host my website.
+ I am using Git to host my website.<br>
+ This site is run and maintained by Suyash Prajapati
  </body>
  </html>
